--- a/app/src/main/res/layout/toolbar_custom.xml
+++ b/app/src/main/res/layout/toolbar_custom.xml
@@ -7,7 +7,7 @@
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/tbPrincipal"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
