--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -33,7 +33,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Digite seu e-mail"
+            android:hint="@string/tv_email"
             android:inputType="text|textEmailAddress" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -53,7 +53,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Digite sua senha"
+            android:hint="@string/tv_senha"
             android:inputType="text|textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -65,6 +65,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:text="@string/tv_nao_tem_conta"
+        android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/textCadastro"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="packed"
@@ -80,6 +81,7 @@
         android:layout_marginEnd="8dp"
         android:text="@string/tv_cadastre_se"
         android:textColor="@color/destaque"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/textView"
